--- a/src/scss/component/_prism.scss
+++ b/src/scss/component/_prism.scss
@@ -27,12 +27,14 @@ pre[class*='language-'] {
 pre[class*='language-'] {
   display: grid;
   overflow: visible;
-  padding: spacer('m');
+  padding: spacer('m') spacer('m') spacer('s');
 }
 
 pre[class*='language-'] code {
+  @include scrollbar;
   background-color: transparent;
-  padding: 0;
+  overflow-x: auto;
+  padding: 0 0 spacer('s');
 }
 
 :not(pre) > code[class*='language-'],
