--- a/src/scss/section/_post-content.scss
+++ b/src/scss/section/_post-content.scss
@@ -40,7 +40,6 @@
   }
 
   pre[class*='language-'] {
-    overflow-x: auto;
     position: relative;
 
     &::before {
